package com.baratali.cnote.core.util

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"

    const val NOTE_TITLE_TEXT_FIELD = "NOTE_TITLE_TEXT_FIELD"
    const val NOTE_CONTENT_TEXT_FIELD = "NOTE_CONTENT_TEXT_FIELD"
    const val TASK_TITLE_TEXT_FIELD = "TASK_TITLE_TEXT_FIELD"
    const val TASK_CONTENT_TEXT_FIELD = "TASK_CONTENT_TEXT_FIELD"

    const val ORDER_BY_NAME = "ORDER_BY_NAME"
    const val NOTE_ITEM = "NOTE_ITEM"
}