<resources>
    <string name="app_name">CNote</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_note">Add Note</string>
    <string name="tasks">Tasks</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="sort">Sort</string>
    <string name="important_task">Important Task</string>
    <string name="task_completed">Task Completed</string>
    <string name="save_task">Save Task</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="more">more</string>
    <string name="delete_all_completed">Delete All Completed</string>
    <string name="completed">Completed</string>
    <string name="important">Important</string>
    <string name="save_note">Save note</string>
    <string name="exit_check_message">Keep the thoughts? Hit \'Save\'! 😊</string>
    <string name="exit_check_title">Quick Check</string>
    <string name="exit_check_confirm">Save</string>
    <string name="exit_check_discard">Discard</string>
    <string name="search">search</string>
    <string name="back">back</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="undo">Undo</string>
    <string name="cant_save_note">Can\'t save note</string>
    <string name="task_deleted">Task deleted</string>
    <string name="not_now">Not now</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="time_to_do_it">Let’s get it done!</string>
    <string name="only_1_hour_left">Just 1 hour left — stay on it</string>
    <string name="task_reminder">Task Reminder</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notification</string>
    <string name="settings">Settings</string>
    <string name="select_priority">Select Priority</string>
    <string name="sort_by_priority">Sort By Priority</string>
    <string name="cant_save_task">Can\'t Save Task</string>
    <string name="create">Create</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="none">None</string>
    <string name="system_default">System Default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="set_password">Set Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_must_match">Password must match</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="choose_color">Choose Color</string>
    <string name="create_new_category">Create New Category</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="or_use_your_fingerprint">Or use your fingerprint</string>
    <string name="or_use_your_face">Or use your face</string>
    <string name="or_use_your_fingerprint_face">Or use your fingerprint/face</string>
    <string name="gregorian">Georgian</string>
    <string name="jalali">Jalali</string>
    <string name="calendar_type">Calendar type</string>
    <string name="confirm_persian" translatable="false">تایید</string>
    <string name="cancel_persian" translatable="false">لغو</string>
    <string name="today_persian" translatable="false">امروز</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="all">All</string>
</resources>